[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3"
time = "0.3"

[target.'cfg(unix)'.dependencies]
fuser = { version = "0.14", features = ["abi-7-31"] }
libc = "0.2"
daemonize = "0.5"

[target.'cfg(windows)'.dependencies]
winfsp = "0.12"
winfsp-sys = "0.12"

[target.'cfg(windows)'.build-dependencies]
winfsp = "0.12"