[package]
name = "client"
version = "0.1.0"
edition = "2021"
build = "build/windows.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3"
time = "0.3"

[target.'cfg(unix)'.dependencies]
fuser = { version = "0.16", features = ["abi-7-31", "libfuse"] }
libc = "0.2"
daemonize = "0.5"

[target.'cfg(windows)'.dependencies]
winfsp = { version = "0.12", features = ["system"] }
winfsp-sys = "0.12"
ctrlc = "3.4"
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Threading"] }

[target.'cfg(windows)'.build-dependencies]
winfsp = "0.12"